--- a/templates/info2.html
+++ b/templates/info2.html
@@ -55,24 +55,24 @@
                 <div class="card-body text-dark">
                     <h4>6:30 AM</h4>
                     <h5><strong>Division Run</strong></h5>
-                    <p>Weyand Field</p>
+                    <p><a href="javascript:showLocation('Weyand Field')">Weyand Field</a></p>
                     <h4>9:00 AM</h4>
                     <h5><strong>Competitive Events</strong></h5>
                     <p>
-                        CPT Riley Pitts Softball Tournament [Stoneman Sports Complex]<br>
-                        T4 Laverne Parrish Ultimate Frisbee Tournament [Leaders Field]<br>
-                        CPL Benito Martinez Tug-O-War Tournament [Stoneman Sports Complex]<br>
-                        CPT Robert Foley Basketball Tournament [A Quad]<br>
-                        MSG Charles McGaha Video Game Tournament [Tropics Recreation Center]<br>
-                        SP4 Ardie Copas Weightlifting Tournament [Martinez Gym]<br>
-                        CPT Lewis Millett Combatives Tournament [Martinez Gym]
+                        CPT Riley Pitts Softball Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        T4 Laverne Parrish Ultimate Frisbee Tournament [<a href="javascript:showLocation('Leaders Field')">Leader's Field</a>]<br>
+                        CPL Benito Martinez Tug-O-War Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        CPT Robert Foley Basketball Tournament [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br>
+                        MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
+                        SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
+                        CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]
                     </p>
                     <h4>1:00 PM</h4>
                     <h5><strong>Bob Hope Talent Show</strong></h5>
-                    <p>SGT Smith Theater</p>
+                    <p><a href="javascript:showLocation('SGT Smith Theater')">SGT Smith Theater</a></p>
                     <h4>4:00 PM</h4>
                     <h5><strong>Medal of Honor Plaque Unveiling</strong></h5>
-                    <p>Tropic Lightning Memorial</p>
+                    <p><a href="javascript:showLocation('Tropic Lightning Memorial')">Tropic Lightning Memorial</a></p>
 
                 </div>
             </div>
@@ -91,17 +91,17 @@
                     <h4>9:00 AM</h4>
                     <h5><strong>Competitive Events</strong></h5>
                     <p>
-                        CPT Riley Pitts Softball Tournament [Stoneman Sports Complex]<br>
-                        T4 Laverne Parrish Ultimate Frisbee Tournament [Leaders Field]<br>
-                        CPT Reginald Desiderio Football Tournament [Stoneman Sports Complex]<br>
-                        PFC William Thompson Volleyball Tournament [Tropics Recreation Center]<br>
-                        SP4 Daniel Fernandez Bowling Competition [Schofield Bowling Center]<br>
-                        MSG Charles McGaha Video Game Tournament [Tropics Recreation Center]<br>
-                        CPT Ronald Ray Cook-Off [Culinary Lab]<br>
-                        PFC Bryant Womack Surf Competition [Whiteplains Beach]<br>
-                        SP4 Ardie Copas Weightlifting Tournament [Martinez Gym]<br>
-                        CPT Lewis Millett Combatives Tournament [Martinez Gym]<br>
-                        Field Feeding Cook-Off [Weyand Field]
+                        CPT Riley Pitts Softball Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        T4 Laverne Parrish Ultimate Frisbee Tournament [<a href="javascript:showLocation('Leaders Field')">Leader's Field</a>]<br>
+                        CPT Reginald Desiderio Football Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        PFC William Thompson Volleyball Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
+                        SP4 Daniel Fernandez Bowling Competition [<a href="javascript:showLocation('Schofield Bowling Center')">Schofield Bowling Center</a>]<br>
+                        MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
+                        CPT Ronald Ray Cook-Off [<a href="javascript:showLocation('Culinary Lab')">Culinary Lab</a>]<br>
+                        PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br>
+                        SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
+                        CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
+                        Field Feeding Cook-Off [<a href="javascript:showLocation('Weyand Field')">Weyand Field</a>]
                     </p>
                 </div>
             </div>
@@ -119,25 +119,26 @@
                 <div class="card-body text-dark">
                     <h4>6:30 AM</h4>
                     <h5><strong>SSG Raymond Cooley 10K Race</strong></h5>
-                    <p>Weyand Field</p>
+                    <p><a href="javascript:showLocation('Weyand Field')">Weyand Field</a></p>
 
                     <h4>9:00 AM</h4>
                     <h5><strong>Competitive Events</strong></h5>
                     <p>
-                        CPT Riley Pitts Softball Tournament [Stoneman Sports Complex]<br>
-                        T4 Laverne Parrish Ultimate Frisbee Tournament [Leaders Field]<br>
-                        CPT Reginald Desiderio Football Tournament [Stoneman Sports Complex]<br>
-                        MSG Charles McGaha Video Game Tournament [Tropics Recreation Center]<br>
-                        CPT Ronald Ray Cook-Off [Culinary Lab]<br>
-                        PFC Bryant Womack Surf Competition [White Plains Beach]<br>
-                        SP4 Ardie Copas Weightlifting Tournament [Martinez Gym]<br>
-                        CPT Lewis Millett Combatives Tournament [Martinez Gym]<br>
-                        1LT John Warren Drone Competition [A Quad]
+                        CPT Riley Pitts Softball Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        T4 Laverne Parrish Ultimate Frisbee Tournament [<a href="javascript:showLocation('Leaders Field')">Leader's Field</a>]<br>
+                        CPT Reginald Desiderio Football Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
+                        CPT Ronald Ray Cook-Off [<a href="javascript:showLocation('Culinary Lab')">Culinary Lab</a>]<br>
+                        PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br>
+                        SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
+                        CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
+                        1LT John Warren Drone Competition [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br>
+                        SGT William Fournier Swimming Relay [<a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a>]
                     </p>
 
                     <h4>4:00 PM</h4>
                     <h5><strong>Tropic Lightning Foundation Induction Ceremony</strong></h5>
-                    <p>Tropic Lightning Memorial</p>
+                    <p><a href="javascript:showLocation('Tropic Lightning Memorial')">Tropic Lightning Memorial</a></p>
                 </div>
             </div>
         </div>
@@ -154,7 +155,7 @@
                 <div class="card-body text-dark">
                     <h4>10:30 AM</h4>
                     <h5><strong>Closing Ceremony</strong></h5>
-                    <p>Weyand Field</p>
+                    <p><a href="javascript:showLocation('Weyand Field')">Weyand Field</a></p>
                 </div>
             </div>
         </div>
@@ -163,7 +164,52 @@
 <hr>
 <div class="container-md text-center">
     <h2>Event Map</h2>
-    <img src="static/display/tlw_map.jpg" width="800px">
+    <div id="map" style="width: 100%; height: 500px;"></div>
+    <script>
+        var map;
+        var marker=null;
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 21.495086078644515, lng: -158.0623113966433},
+            zoom: 14,
+            });
+        };
+
+        var locations = {
+            "Weyand Field": {lat: 21.49115270988194, lng: -158.05928278670592},
+            "Stoneman Sports Complex": {lat: 21.498019691749196, lng: -158.05189535726626},
+            "Leaders Field": {lat: 21.491935797469335, lng: -158.08071314104825},
+            "E Quad": {lat: 21.492940626379337, lng: -158.0544807738424},
+            "Tropics Recreation Center": {lat: 21.490546247351872, lng: -158.05384630308},
+            "Martinez Physical Fitness Center": {lat: 21.489567293464024, lng: -158.0531372248238},
+            "SGT Smith Theater": {lat: 21.49204379463468, lng: -158.05602205881257},
+            "Tropic Lightning Memorial": {lat: 21.490134939181367, lng: -158.05888836463802},
+            "White Plains Beach": {lat: 21.303668257421904, lng: -158.04521400393108},
+            "Schofield Bowling Center": {lat: 21.490304226975162, lng: -158.05621537479138},
+            "Culinary Lab": {lat: 21.492400594061255, lng: -158.0546852751289},
+            "Richardson Pool": {lat: 21.489725940782293, lng: -158.060508795961}
+        };
+
+        function showLocation(locationName) {
+            map.zoom=17;
+            document.getElementById('map').scrollIntoView({behavior: "smooth", block: "center", inline: "nearest"});
+            var location = locations[locationName];
+            if (location) {
+                if (marker) {
+                    // Remove the previous marker when user clicks on a link
+                    marker.setMap(null);
+                }
+                map.setCenter(location);
+                marker = new google.maps.Marker({
+                    position: location,
+                    map: map,
+                    title: locationName
+                });
+            }
+        };
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{GMAP}}&callback=initMap"></script>
 </div>
 
 <hr>
