Minor formatting and wording

--- a/templates/labs.html
+++ b/templates/labs.html
@@ -6,19 +6,20 @@
 {% block content %}
     <div class="container-md">
         <h1>Lightning Labs</h1>
-        <div class="container-sm border border-dark w-50">
+        <div class="container-sm border border-dark">
             <p><q>...it is the Soldiers in the field - those who have to fight - who should play a major role in determining what equipment they need to have and how they will operate.</q></p>
             <p class="text-right">-Jon T. Hoffman, A History of Innovation</p>
         </div>
         <br>
         <p>The National Defense Strategy (NDS) makes clear that the increasingly complex and disordered battlefield of
             the near-future requires a more lethal, resilient, and rapidly innovating force. The 25th Infantry Division
-            has therefore began an innovation program, and Lightning Labs is one part of that. Lightning Labs build on
-            the successes and failures of existing programs.</p>
-        <p>Lightning Labs believe that <b>great ideas can come from anyone</b>, anywhere, irrespective of rank or
+            has therefore began an innovation program, and Lightning Labs is one part of that. Lightning Labs builds on
+            the successes and failures of existing programs of other units.</p>
+        <p>Lightning Labs believes that <b>great ideas can come from anyone</b>, anywhere, irrespective of rank or
             position. Soldiers possess the tactical knowledge to identify opportunities to improve their mission sets,
             and they should be encouraged and provided the resources to do so.</p>
-        <p>Lightning Labs is looking for talents! Please reach out if you believe you will be a good fit for Lightning Labs.
+        <p>Lightning Labs is looking for talented Soldiers! Please contact us through the email below if you believe you
+            will be a good fit for Lightning Labs.
         <img src="static/LL_Logo.png" width="25"></p>
     </div>
 
