--- a/templates/scores.html
+++ b/templates/scores.html
@@ -8,7 +8,7 @@
         {% if show_leaderboard %}
         <div class="container-md text-center">
             <hr>
-            <h2>Leaderboard - Total Scores</h2>
+            <h2>Leaderboard<br>Total Scores</h2>
             <ul class="container-fluid list-group text-center">
                 {% for team in teams %}
                 <li class="list-group-item bg-secondary text-light">
