--- a/templates/info2.html
+++ b/templates/info2.html
@@ -71,7 +71,7 @@
                     <h5><strong>Bob Hope Talent Show</strong></h5>
                     <p><a href="javascript:showLocation('SGT Smith Theater')">SGT Smith Theater</a></p>
                     <h4>4:00 PM</h4>
-                    <h5><strong>Medal of Honor Plaque Unveiling</strong></h5>
+                    <h5><strong>Tropic Lightning Association Recognition Ceremony</strong></h5>
                     <p><a href="javascript:showLocation('Tropic Lightning Memorial')">Tropic Lightning Memorial</a></p>
 
                 </div>
