--- a/templates/info2.html
+++ b/templates/info2.html
@@ -39,7 +39,37 @@
 </div>
 <hr>
 
+
+
 <div class="container-md text-left">
+    <h2>Events</h2>
+    <div class="card">
+        <div class="card-header">
+            <strong>Competitive Events</strong>
+        </div>
+        <div class="card-body">
+            CPT Riley Pitts Softball Tournament<br>
+            T4 Laverne Parrish Ultimate Frisbee Tournament<br>
+            CPL Benito Martinez Tug-O-War Tournament<br>
+            CPT Robert Foley Basketball Tournament<br>
+            PFC William Thompson Volleyball Tournament<br>
+            MSG Charles McGaha Video Game Tournament<br>
+            SP4 Ardie Copas Weightlifting Tournament<br>
+            CPT Lewis Millett Combatives Tournament<br>
+            CPT Reginald Desiderio Football Tournament<br>
+            SP4 Daniel Fernandez Bowling Competition<br>
+            MSG Charles McGaha Video Game Tournament<br>
+            CPT Ronald Ray Cook-Off<br>
+            PFC Bryant Womack Surf Competition<br>
+            Field Feeding Cook-Off<br>
+            1LT John Warren Drone Competition<br>
+            SGT William Fournier Swimming Relay<br>
+            Bob Hope Talent Show<br>
+            10K Race<br>
+            Stress Shoot
+        </div>
+    </div>
+
     <h2>Schedule</h2>
     <div id="accordion">
         <div class="card">
