--- a/templates/info2.html
+++ b/templates/info2.html
@@ -163,7 +163,7 @@
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         1LT John Warren Drone Competition [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br>
-                        SGT William Fournier Swimming Relay [<a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a>]
+                        SGT William Fournier Swimming Relay [<a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a>]<br>
                         SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Range CR2')">Range SB/CR-2</a>]
                     </p>
 
@@ -219,7 +219,7 @@
             "White Plains Beach": {lat: 21.303668257421904, lng: -158.04521400393108},
             "Schofield Bowling Center": {lat: 21.490304226975162, lng: -158.05621537479138},
             "Culinary Lab": {lat: 21.492400594061255, lng: -158.0546852751289},
-            "Richardson Pool": {lat: 21.489725940782293, lng: -158.060508795961}
+            "Richardson Pool": {lat: 21.489725940782293, lng: -158.060508795961},
             "Range CR2": {lat: 21.49905479336757, lng: -158.08229578700534}
         };
 
