--- a/templates/info2.html
+++ b/templates/info2.html
@@ -39,7 +39,37 @@
 </div>
 <hr>
 
+
+
 <div class="container-md text-left">
+    <h2>Events</h2>
+    <div class="card">
+        <div class="card-header">
+            <strong>Competitive Events</strong>
+        </div>
+        <div class="card-body">
+            CPT Riley Pitts Softball Tournament<br>
+            T4 Laverne Parrish Ultimate Frisbee Tournament<br>
+            CPL Benito Martinez Tug-O-War Tournament<br>
+            CPT Robert Foley Basketball Tournament<br>
+            PFC William Thompson Volleyball Tournament<br>
+            MSG Charles McGaha Video Game Tournament<br>
+            SP4 Ardie Copas Weightlifting Tournament<br>
+            CPT Lewis Millett Combatives Tournament<br>
+            CPT Reginald Desiderio Football Tournament<br>
+            SP4 Daniel Fernandez Bowling Competition<br>
+            MSG Charles McGaha Video Game Tournament<br>
+            CPT Ronald Ray Cook-Off<br>
+            PFC Bryant Womack Surf Competition<br>
+            Field Feeding Cook-Off<br>
+            1LT John Warren Drone Competition<br>
+            SGT William Fournier Swimming Relay<br>
+            Bob Hope Talent Show<br>
+            SSG Raymond Cooley 10K Race<br>
+            SP5 Dwight Birdwell Stress Shoot
+        </div>
+    </div>
+
     <h2>Schedule</h2>
     <div id="accordion">
         <div class="card">
@@ -133,7 +163,8 @@
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         1LT John Warren Drone Competition [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br>
-                        SGT William Fournier Swimming Relay [<a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a>]
+                        SGT William Fournier Swimming Relay [<a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a>]<br>
+                        SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Range CR2')">Range SB/CR-2</a>]
                     </p>
 
                     <h4>4:00 PM</h4>
@@ -188,7 +219,8 @@
             "White Plains Beach": {lat: 21.303668257421904, lng: -158.04521400393108},
             "Schofield Bowling Center": {lat: 21.490304226975162, lng: -158.05621537479138},
             "Culinary Lab": {lat: 21.492400594061255, lng: -158.0546852751289},
-            "Richardson Pool": {lat: 21.489725940782293, lng: -158.060508795961}
+            "Richardson Pool": {lat: 21.489725940782293, lng: -158.060508795961},
+            "Range CR2": {lat: 21.49905479336757, lng: -158.08229578700534}
         };
 
         function showLocation(locationName) {
