add html for events w/brackets, url_for call template logos

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -48,15 +48,15 @@
             <strong>Competitive Events</strong>
         </div>
         <div class="card-body">
-            CPT Riley Pitts Softball Tournament<br>
-            T4 Laverne Parrish Ultimate Frisbee Tournament<br>
-            CPL Benito Martinez Tug-O-War Tournament<br>
-            CPT Robert Foley Basketball Tournament<br>
-            PFC William Thompson Volleyball Tournament<br>
+            CPT Riley Pitts <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
+            T4 Laverne Parrish <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a><br>
+            CPL Benito Martinez <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
+            CPT Robert Foley <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
+            PFC William Thompson <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
             MSG Charles McGaha Video Game Tournament<br>
             SP4 Ardie Copas Weightlifting Tournament<br>
-            CPT Lewis Millett Combatives Tournament<br>
-            CPT Reginald Desiderio Football Tournament<br>
+            CPT Lewis Millett <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
+            CPT Reginald Desiderio <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
             SP4 Daniel Fernandez Bowling Competition<br>
             MSG Charles McGaha Video Game Tournament<br>
             CPT Ronald Ray Cook-Off<br>
