--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,13 @@
 <body class="bg-light text-black">
     <nav class="navbar navbar-expand-md bg-secondary fixed-top">
         <a class="navbar-brand text-dark" href="{{url_for('info')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/25ID_Logo.png" height="18">Home</button>
+            <button class="btn btn-dark btn-sm"><img src="{{url_for('static', filename='25ID_Logo.png')}}" height="18">Home</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('scores')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/Guadalcanal_Cup.png" height="18">Scores</button>
+            <button class="btn btn-dark btn-sm"><img src="{{url_for('static', filename='Guadalcanal_Cup.png')}}" height="18">Scores</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('labs')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" height="18">Labs</button>
+            <button class="btn btn-dark btn-sm"><img src="{{url_for('static', filename='LL_Logo.png')}}" height="18">Labs</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('login')}}">
             <button class="btn btn-dark btn-sm">Login</button>
@@ -48,7 +48,7 @@
     <hr>
     <div class="container-md bg-light text-dark">
         <hr>
-        <img src="static/LL_Logo.png" width="35" height="35" alt="Lightning Labs">
+        <img src="{{url_for('static', filename='LL_Logo.png')}}" width="35" height="35" alt="Lightning Labs">
         <label>Created by Lightning Labs</label>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a>
         <hr>
