added styles sheet and MOH pics and html

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -48,9 +48,9 @@
             <strong>Competitive Events</strong>
         </div>
         <div class="card-body">
-            CPT Riley Pitts <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='pitts')}}">CPT Riley Pitts</a> <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
             T4 Laverne Parrish <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a><br>
-            CPL Benito Martinez <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='martinez')}}">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
             CPT Robert Foley <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
             PFC William Thompson <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
             MSG Charles McGaha Video Game Tournament<br>
@@ -65,7 +65,7 @@
             1LT John Warren Drone Competition<br>
             SGT William Fournier Swimming Relay<br>
             Bob Hope Talent Show<br>
-            SSG Raymond Cooley 10K Race<br>
+            <a href="{{url_for('medalhonor', hero='cooley')}}">SSG Raymond Cooley</a> 10K Race<br>
             SP5 Dwight Birdwell Stress Shoot
         </div>
     </div>
