added some more heroes

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -52,21 +52,21 @@
             T4 Laverne Parrish <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='martinez')}}">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
             CPT Robert Foley <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
-            PFC William Thompson <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='thompson')}}">PFC William Thompson</a> <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
             MSG Charles McGaha Video Game Tournament<br>
-            SP4 Ardie Copas Weightlifting Tournament<br>
-            CPT Lewis Millett <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='copas')}}">SP4 Ardie Copas</a> Weightlifting Tournament<br>
+            <a href="{{url_for('medalhonor', hero='millett')}}">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
             CPT Reginald Desiderio <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
-            SP4 Daniel Fernandez Bowling Competition<br>
+            <a href="{{url_for('medalhonor', hero='fernandez')}}">SP4 Daniel Fernandez</a> Bowling Competition<br>
             MSG Charles McGaha Video Game Tournament<br>
             CPT Ronald Ray Cook-Off<br>
             PFC Bryant Womack Surf Competition<br>
             Field Feeding Cook-Off<br>
             1LT John Warren Drone Competition<br>
-            SGT William Fournier Swimming Relay<br>
+            <a href="{{url_for('medalhonor', hero='fournier')}}">SGT William Fournier</a> Swimming Relay<br>
             Bob Hope Talent Show<br>
             <a href="{{url_for('medalhonor', hero='cooley')}}">SSG Raymond Cooley</a> 10K Race<br>
-            SP5 Dwight Birdwell Stress Shoot
+            <a href="{{url_for('medalhonor', hero='birdwell')}}">SP5 Dwight Birdwell</a> Stress Shoot
         </div>
     </div>
 
