--- a/templates/info2.html
+++ b/templates/info2.html
@@ -49,20 +49,19 @@
         </div>
         <div class="card-body">
             <a href="{{url_for('medalhonor', hero='pitts')}}">CPT Riley Pitts</a> <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
-            T4 Laverne Parrish <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='parrish')}}">T4 Laverne Parrish</a> <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='martinez')}}">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
-            CPT Robert Foley <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='foley')}}">CPT Robert Foley</a> <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='thompson')}}">PFC William Thompson</a> <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
-            MSG Charles McGaha Video Game Tournament<br>
+            <a href="{{url_for('medalhonor', hero='mcgaha')}}">MSG Charles McGaha</a> Video Game Tournament<br>
             <a href="{{url_for('medalhonor', hero='copas')}}">SP4 Ardie Copas</a> Weightlifting Tournament<br>
             <a href="{{url_for('medalhonor', hero='millett')}}">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
-            CPT Reginald Desiderio <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='desderio')}}">CPT Reginald Desiderio</a> <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='fernandez')}}">SP4 Daniel Fernandez</a> Bowling Competition<br>
-            MSG Charles McGaha Video Game Tournament<br>
-            CPT Ronald Ray Cook-Off<br>
-            PFC Bryant Womack Surf Competition<br>
-            Field Feeding Cook-Off<br>
-            1LT John Warren Drone Competition<br>
+            <a href="{{url_for('medalhonor', hero='ray')}}">CPT Ronald Ray</a> Cook-Off<br>
+            <a href="{{url_for('medalhonor', hero='womack')}}">PFC Bryant Womack</a> Surf Competition<br>
+            <a href="{{url_for('medalhonor', hero='yabes')}}">1SG Maximo Yabes</a> Field Feeding Cook-Off<br>
+            <a href="{{url_for('medalhonor', hero='warren')}}">1LT John Warren</a> Drone Competition<br>
             <a href="{{url_for('medalhonor', hero='fournier')}}">SGT William Fournier</a> Swimming Relay<br>
             Bob Hope Talent Show<br>
             <a href="{{url_for('medalhonor', hero='cooley')}}">SSG Raymond Cooley</a> 10K Race<br>
