--- a/templates/labs.html
+++ b/templates/labs.html
@@ -18,8 +18,8 @@
         <p>Lightning Labs believes that <b>great ideas can come from anyone</b>, anywhere, irrespective of rank or
             position. Soldiers possess the tactical knowledge to identify opportunities to improve their mission sets,
             and they should be encouraged and provided the resources to do so.</p>
-        <p>Lightning Labs is looking for talented Soldiers, specifically Soldiers with software development experience!
-            Please contact us through the email below if you believe you will be a good fit for Lightning Labs.
+        <p class="emphasize-hiring">Lightning Labs is looking for talented Soldiers, specifically Soldiers with software development experience!</p>
+        <p>Please contact us through the email below if you believe you will be a good fit for Lightning Labs.
         <img src="static/LL_Logo.png" width="25"></p>
     </div>
 
