--- a/templates/info2.html
+++ b/templates/info2.html
@@ -48,24 +48,24 @@
             <strong>Competitive Events</strong>
         </div>
         <div class="card-body">
-            <a href="{{url_for('medalhonor', hero='pitts')}}">CPT Riley Pitts</a> <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='parrish')}}">T4 Laverne Parrish</a> <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='martinez')}}">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='foley')}}">CPT Robert Foley</a> <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='thompson')}}">PFC William Thompson</a> <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='mcgaha')}}">MSG Charles McGaha</a> Video Game Tournament<br>
-            <a href="{{url_for('medalhonor', hero='copas')}}">SP4 Ardie Copas</a> Weightlifting Tournament<br>
-            <a href="{{url_for('medalhonor', hero='millett')}}">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='desderio')}}">CPT Reginald Desiderio</a> <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='fernandez')}}">SP4 Daniel Fernandez</a> Bowling Competition<br>
-            <a href="{{url_for('medalhonor', hero='ray')}}">CPT Ronald Ray</a> Cook-Off<br>
-            <a href="{{url_for('medalhonor', hero='womack')}}">PFC Bryant Womack</a> Surf Competition<br>
-            <a href="{{url_for('medalhonor', hero='yabes')}}">1SG Maximo Yabes</a> Field Feeding Cook-Off<br>
-            <a href="{{url_for('medalhonor', hero='warren')}}">1LT John Warren</a> Drone Competition<br>
-            <a href="{{url_for('medalhonor', hero='fournier')}}">SGT William Fournier</a> Swimming Relay<br>
+            <a href="{{url_for('medalhonor', hero='pitts')}}" class="hero-link">CPT Riley Pitts</a> <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='parrish')}}" class="hero-link">T4 Laverne Parrish</a> <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='martinez')}}" class="hero-link">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='foley')}}" class="hero-link">CPT Robert Foley</a> <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='thompson')}}" class="hero-link">PFC William Thompson</a> <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='mcgaha')}}" class="hero-link">MSG Charles McGaha</a> Video Game Tournament<br>
+            <a href="{{url_for('medalhonor', hero='copas')}}" class="hero-link">SP4 Ardie Copas</a> Weightlifting Tournament<br>
+            <a href="{{url_for('medalhonor', hero='millett')}}" class="hero-link">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='desderio')}}" class="hero-link">CPT Reginald Desiderio</a> <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
+            <a href="{{url_for('medalhonor', hero='fernandez')}}" class="hero-link">SP4 Daniel Fernandez</a> Bowling Competition<br>
+            <a href="{{url_for('medalhonor', hero='ray')}}" class="hero-link">CPT Ronald Ray</a> Cook-Off<br>
+            <a href="{{url_for('medalhonor', hero='womack')}}" class="hero-link">PFC Bryant Womack</a> Surf Competition<br>
+            <a href="{{url_for('medalhonor', hero='yabes')}}" class="hero-link">1SG Maximo Yabes</a> Field Feeding Cook-Off<br>
+            <a href="{{url_for('medalhonor', hero='warren')}}" class="hero-link">1LT John Warren</a> Drone Competition<br>
+            <a href="{{url_for('medalhonor', hero='fournier')}}" class="hero-link">SGT William Fournier</a> Swimming Relay<br>
             Bob Hope Talent Show<br>
-            <a href="{{url_for('medalhonor', hero='cooley')}}">SSG Raymond Cooley</a> 10K Race<br>
-            <a href="{{url_for('medalhonor', hero='birdwell')}}">SP5 Dwight Birdwell</a> Stress Shoot
+            <a href="{{url_for('medalhonor', hero='cooley')}}" class="hero-link">SSG Raymond Cooley</a> 10K Race<br>
+            <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> Stress Shoot
         </div>
     </div>
 
