updated time and loc of three events

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -91,7 +91,7 @@
                         CPT Riley Pitts Softball Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
                         T4 Laverne Parrish Ultimate Frisbee Tournament [<a href="javascript:showLocation('Leaders Field')">Leader's Field</a>]<br>
                         CPL Benito Martinez Tug-O-War Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
-                        CPT Robert Foley Basketball Tournament [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br>
+                        <!-- CPT Robert Foley Basketball Tournament [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br> -->
                         PFC William Thompson Volleyball Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
                         MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
@@ -100,9 +100,9 @@
                     <h4>1:00 PM</h4>
                     <h5><strong>Bob Hope Talent Show</strong></h5>
                     <p><a href="javascript:showLocation('SGT Smith Theater')">SGT Smith Theater</a></p>
-                    <h4>4:00 PM</h4>
-                    <h5><strong>Tropic Lightning Association Recognition Ceremony</strong></h5>
-                    <p><a href="javascript:showLocation('Tropic Lightning Memorial')">Tropic Lightning Memorial</a></p>
+                    <!-- <h4>4:00 PM</h4> -->
+                    <!-- <h5><strong>Tropic Lightning Association Recognition Ceremony</strong></h5>
+                    <p><a href="javascript:showLocation('Tropic Lightning Memorial')">Tropic Lightning Memorial</a></p> -->
 
                 </div>
             </div>
@@ -130,7 +130,8 @@
                         PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br>
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
-                        Field Feeding Cook-Off [<a href="javascript:showLocation('Weyand Field')">Weyand Field</a>]
+                        Field Feeding Cook-Off [<a href="javascript:showLocation('Weyand Field')">Weyand Field</a>]<br>
+                        SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Bronco Ready Range')">Bronco Ready Range</a>]
                     </p>
                 </div>
             </div>
@@ -156,6 +157,7 @@
                         CPT Riley Pitts Softball Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
                         T4 Laverne Parrish Ultimate Frisbee Tournament [<a href="javascript:showLocation('Leaders Field')">Leader's Field</a>]<br>
                         CPT Reginald Desiderio Football Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        CPT Robert Foley Basketball Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
                         CPT Ronald Ray Cook-Off [<a href="javascript:showLocation('Culinary Lab')">Culinary Lab</a>]<br>
                         PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br>
@@ -163,7 +165,7 @@
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         1LT John Warren Drone Competition [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br>
                         SGT William Fournier Swimming Relay [<a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a>]<br>
-                        SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Range CR2')">Range SB/CR-2</a>]
+                        <!-- SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Range CR2')">Range SB/CR-2</a>] -->
                     </p>
 
                     <h4>4:00 PM</h4>
@@ -219,7 +221,8 @@
             "Schofield Bowling Center": {lat: 21.490304226975162, lng: -158.05621537479138},
             "Culinary Lab": {lat: 21.492400594061255, lng: -158.0546852751289},
             "Richardson Pool": {lat: 21.489725940782293, lng: -158.060508795961},
-            "Range CR2": {lat: 21.49905479336757, lng: -158.08229578700534}
+            "Range CR2": {lat: 21.49905479336757, lng: -158.08229578700534},
+            "Bronco Ready Range": {lat: 21.50448, lng: -158.07351}
         };
 
         function showLocation(locationName) {
