moved Culinary Lab location 1 quad North

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -219,7 +219,8 @@
             "Tropic Lightning Memorial": {lat: 21.490134939181367, lng: -158.05888836463802},
             "White Plains Beach": {lat: 21.303668257421904, lng: -158.04521400393108},
             "Schofield Bowling Center": {lat: 21.490304226975162, lng: -158.05621537479138},
-            "Culinary Lab": {lat: 21.492400594061255, lng: -158.0546852751289},
+            // "Culinary Lab": {lat: 21.492400594061255, lng: -158.0546852751289},
+            "Culinary Lab": {lat: 21.493678, lng: -158.056252},
             "Richardson Pool": {lat: 21.489725940782293, lng: -158.060508795961},
             "Range CR2": {lat: 21.49905479336757, lng: -158.08229578700534},
             "Bronco Ready Range": {lat: 21.50448, lng: -158.07351}
