add italic message to bde-only events

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -60,8 +60,8 @@
             <a href="{{url_for('medalhonor', hero='fernandez')}}" class="hero-link">SP4 Daniel Fernandez</a> Bowling Competition<br>
             <a href="{{url_for('medalhonor', hero='ray')}}" class="hero-link">CPT Ronald Ray</a> Cook-Off<br>
             <a href="{{url_for('medalhonor', hero='womack')}}" class="hero-link">PFC Bryant Womack</a> <a href="{{url_for('bracket', event_id='surf')}}">Surf Competition</a><br>
-            <a href="{{url_for('medalhonor', hero='yabes')}}" class="hero-link">1SG Maximo Yabes</a> Field Feeding Cook-Off<br>
-            <a href="{{url_for('medalhonor', hero='warren')}}" class="hero-link">1LT John Warren</a> Drone Competition<br>
+            <a href="{{url_for('medalhonor', hero='yabes')}}" class="hero-link">1SG Maximo Yabes</a> Field Feeding Cook-Off <i>Brigade-Only Event</i><br>
+            <a href="{{url_for('medalhonor', hero='warren')}}" class="hero-link">1LT John Warren</a> Drone Competition <i>Brigade-Only Event</i><br>
             <a href="{{url_for('medalhonor', hero='fournier')}}" class="hero-link">SGT William Fournier</a> <a href="{{url_for('bracket', event_id='swim')}}">Swimming Relay</a><br>
             Bob Hope Talent Show<br>
             <a href="{{url_for('medalhonor', hero='cooley')}}" class="hero-link">SSG Raymond Cooley</a> 10K Race<br>
