updated times for Tug and Surf

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -90,7 +90,7 @@
                     <p>
                         CPT Riley Pitts Softball Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
                         T4 Laverne Parrish Ultimate Frisbee Tournament [<a href="javascript:showLocation('Leaders Field')">Leader's Field</a>]<br>
-                        CPL Benito Martinez Tug-O-War Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br>
+                        <!-- CPL Benito Martinez Tug-O-War Tournament [<a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a>]<br> -->
                         <!-- CPT Robert Foley Basketball Tournament [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br> -->
                         PFC William Thompson Volleyball Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
                         MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
@@ -100,6 +100,9 @@
                     <h4>1:00 PM</h4>
                     <h5><strong>Bob Hope Talent Show</strong></h5>
                     <p><a href="javascript:showLocation('SGT Smith Theater')">SGT Smith Theater</a></p>
+                    <h5><strong>CPL Benito Martinez Tug-O-War Tournament</strong></h5>
+                    <p><a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a></p>
+
                     <!-- <h4>4:00 PM</h4> -->
                     <!-- <h5><strong>Tropic Lightning Association Recognition Ceremony</strong></h5>
                     <p><a href="javascript:showLocation('Tropic Lightning Memorial')">Tropic Lightning Memorial</a></p> -->
@@ -118,6 +121,9 @@
 
             <div id="collapseWednesday" class="collapse" aria-labelledby="headingWednesday" data-parent="#accordion">
                 <div class="card-body text-dark">
+                    <h4>8:30 AM</h4>
+                    <h5><strong>PFC Bryant Womack Surf Competition</strong></h5>
+                    <p><a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a></p>
                     <h4>9:00 AM</h4>
                     <h5><strong>Competitive Events</strong></h5>
                     <p>
@@ -127,7 +133,7 @@
                         SP4 Daniel Fernandez Bowling Competition [<a href="javascript:showLocation('Schofield Bowling Center')">Schofield Bowling Center</a>]<br>
                         MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
                         CPT Ronald Ray Cook-Off [<a href="javascript:showLocation('Culinary Lab')">Culinary Lab</a>]<br>
-                        PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br>
+                        <!-- PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br> -->
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         Field Feeding Cook-Off [<a href="javascript:showLocation('Weyand Field')">Weyand Field</a>]<br>
